# workflowagile

./: README.md  docker-compose.yaml
.github/workflow/: deployement.yml
SSD/: models.py
backend/: .env  .gitignore  Dockerfile  pyproject.toml
backend/backend/: settings.py  urls.py
backend/exam/: models.py  serializers.py  urls.py  views.py
backend/exam/migrations/: 0001_initial.py  0002_alter_activeexam_exam.py  0002_alter_activeexam_start_date.py  0002_alter_exam_exam_id_activeexam.py  0002_remove_activeexam_activated_at_and_more.py  0003_alter_activeexam_exam.py
backend/quesionsstoredasjson/: apps.py  models.py  serializers.py  urls.py  views.py
backend/questions/: admin.py  models.py  serializers.py  urls.py  views.py
backend/questions/migrations/: 0001_initial.py  0002_question_topic.py  0003_answer_latest_version_question_latest_version.py  0004_alter_answer_question.py
backend/questions/tests/: test_integration.py  test_unit.py
backend/questions/utils/: xslxtojson.py
backend/tests/exam/: test_integration.py  test_unit.py
backend/tests/questions/: test_integration.py  test_unit.py
backend/tests/user/: test_integration.py  test_unit.py
backend/user/: authenticate.py  managers.py  models.py  serializers.py  urls.py  validators.py  views.py
backend/user/migrations/: 0001_initial.py  0002_alter_teacher_date_joined.py  0002_remove_teacher_is_active.py  0003_teacher_is_active.py
backend/user/tests/: test_integration.py  test_unit.py
database/: postmaster.pid
database/global/: 1262  (+4 more)
frontend/: Dockerfile  package-lock.json  package.json
(+281 files in other folders)
