[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.0"
django-environ = "^0.11.2"
pytest = "^7.4.3"
pytest-django = "^4.7.0"
mixer = "^7.2.2"
coverage = "^7.3.2"
djangorestframework-simplejwt = "^5.3.0"
setuptools = "^68.2.2"


[tool.poetry.group.dev.dependencies]
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
